# lab-prog-assigment2

./: BatchPeriod.cpp  BatchPeriod.h  BatchProcessor.cpp  BatchProcessor.h  CMakeLists.txt  Component.cpp  Component.h  ComponentReference.cpp  ComponentReference.h  ComponentUsage.cpp  ComponentUsage.h  Date.cpp  Date.h  Entity.cpp  Entity.h  Fund.cpp  Fund.h  Model.cpp  Model.h  Order.cpp  Order.h  Part.cpp  Part.h  README.md  README.txt  Stock.cpp  Stock.h  StockItem.cpp  StockItem.h  Storage.cpp  Storage.h  Supply.cpp  Supply.h  Warehouse.cpp  Warehouse.h  Warehouse_elem.h  main.cpp
parsers/: ComponentParser.cpp  ComponentParser.h  FileParser.cpp  FileParser.h  ModelListParser.cpp  ModelListParser.h  ModelParser.cpp  ModelParser.h  OrderParser.cpp  OrderParser.h
